<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/all_ads" />

        <item
            android:id="@+id/bids"
            android:title="@string/bids" />
        <item
            android:id="@+id/bride"
            android:title="@string/bride_groom" />
        <item
            android:id="@+id/login"
            android:title="@string/log_in" />

        <item
            android:id="@+id/contact"
            android:title="@string/contact" />

        <item
            android:id="@+id/language"
            android:title="Language"
            app:actionLayout="@layout/spinner"/>



    </group>


</menu>