<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/all_ads"
        android:textColor="#000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/bids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/bids"
        android:textColor="#000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/bride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/bride_groom"
        android:textColor="#000"
        android:textSize="15sp" />


</LinearLayout>