<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".Fragments.HomeFragment">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/theme">

        <ImageView
            android:id="@+id/navIcon"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/navIcon"
            android:layout_toRightOf="@+id/navIcon"
            android:fontFamily="@font/comfortaa"
            android:gravity="center_vertical"
            android:text="AdBazar.net"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/homeSearchIV"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_home_search" />

    </RelativeLayout>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="10dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/btnlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="5dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:id="@+id/locationTv"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:drawableLeft="@drawable/ic_baseline_location_on_24"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:padding="8dp"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="5dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme">
                    <TextView
                        android:id="@+id/categoryTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textAlignment="center"
                        android:layout_centerHorizontal="true"
                        android:drawableLeft="@drawable/ic_baseline_format_list_bulleted_24"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:padding="8dp"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnlayout"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:weightSum="5">
            <EditText
                android:id="@+id/searchEt"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:hint="@string/enter_keyword_here"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:textSize="15sp"
                android:textColor="#000"
                android:padding="5dp"
                android:textColorHint="#AFABAB"
                android:layout_marginLeft="5dp"/>
            <ImageView
                android:id="@+id/searchBtn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/search_btn_background"
                android:src="@drawable/ic_home_search"
                android:textColor="#fff"
                android:padding="10dp"
                android:layout_marginRight="5dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ACA7A7"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/searchLayout"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#fff"
        app:itemIconTint="#555"
        app:itemTextColor="#555"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:animateLayoutChanges="true">

            <RelativeLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="94dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l1">

                <RelativeLayout
                    android:id="@+id/adCounterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="-10dp"
                    android:background="#E6E5E5">
                    <TextView
                        android:id="@+id/adCountTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="#000"
                        android:textSize="15sp" />
                </RelativeLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/adsRecycler"
                    android:layout_below="@+id/adCounterLayout"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:elevation="0dp"
                    android:nestedScrollingEnabled="false"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



   <!-- <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/parent"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-->


</RelativeLayout>